# Fractal-painter

./: .gitignore  HSVtoRGB.cl  README.md  README.txt  burningShipPoint.cl  fraktal_de.qm  fraktal_de.ts  juliaPoint.cl  mandelbrotPoint.cl  tricornPoint.cl
src/: CMakeLists.txt  Fraktal.pro  fracfuncclass.cpp  fracfuncclass.h  fraktal_List.h  fraktal_funcs.cpp  fraktal_funcs.h  fraktal_manager.cpp  fraktal_manager.h  juliainputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  openclhandler.cpp  openclhandler.h  renderarea.cpp  renderarea.h  thread.cpp  thread.h  ui_mainwindow.h  ui_renderarea.h
src/CMake/: FindOpenCL.cmake
src/exceptions/: ConstructorException.h  KernelException.h
src/opencl/: openclhandler.cpp  openclhandler.h
src/ui/: juliainputdialog.cpp  juliainputdialog.h  mainwindow.cpp  mainwindow.h  renderarea.cpp  renderarea.h  ui_mainwindow.h  ui_renderarea.h
